# avatar-ai

engine/: README.md  conf.yaml  pyproject.toml  requirements.txt  setup.py
engine/at_demo/: info.txt  pds_account.py
engine/avatarai/: config.py  logger.py  nostr_demo.py
engine/avatarai/agent/: protocol.py  simple.py
engine/avatarai/engine/: async_avatar_engine.py  engine_args.py  protocol.py
engine/avatarai/entrypoints/: serve.py
engine/avatarai/models/: llm.py
engine/avatarai/nostr/: client.py
engine/avatarai/utils/: args_utils.py
engine/avatars/: default.toml
